--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,14 +1,10 @@
 .card {
+	position: relative;
 	background-color: yellow;
-	height: 200px;
-	width: 200px;
+	height: 225px;
+	width: 225px;
 }
 
 .card-image {
 	padding: 5px;
-}
-
-img {
-	height: 200px;
-	width: 200px;
 }
