--- a/src/components/PokemonCard/pokemonCard.css
+++ b/src/components/PokemonCard/pokemonCard.css
@@ -1,9 +1,7 @@
 .card {
-  background: #fff;
-  border-radius: 2px;
-  height: 160px;
-  overflow: hidden;
-  margin: 1rem;
+  background: black;
+  height: 200px;
+  margin: 0.2rem;
   position: relative;
   width: 250px;
   box-shadow: 0 6px 9px gray;
@@ -17,14 +15,13 @@
   text-align: center;
 } 
 .card > .img-container img {
-  margin-top: 10px;
+	margin-top: 10px;
   width: 100%;
-  height: 140px;
+  height: 180px;
 } 
 
 .cardImage {
   display: inline-block;
   border: 0;
-  width: 200px;
-  height: 220px;
+	width: 230px;
 }
